# lazy_control_backend

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  db.sqlite
sql/: 001_init.sql  test.sql
src/: App.cpp  AppComponent.hpp  ConstVariables.hpp  DatabaseComponent.hpp  ErrorHandler.cpp  ErrorHandler.hpp  Filters.hpp  SwaggerComponent.hpp
src/controller/: ConfigController.hpp  StaticController.hpp  UserController.hpp
src/controller/auth/: LoginController.cpp  LoginController.hpp  UserController.cpp  UserController.hpp
src/db/: ConfigDb.hpp  UserDb.hpp
src/dto/: ConfigDto.hpp  PageDTOs.hpp  PageDto.hpp  QueryParamsDto.hpp  StatusDTOs.hpp  StatusDto.hpp  UserDto.hpp
src/dto/auth/: AuthDTOs.hpp  UserDTOs.hpp  UserDTOs.hpp.cpp
src/service/: ConfigService.cpp  ConfigService.hpp  UserService.cpp  UserService.hpp
src/service/user/: UserService.cpp  UserService.hpp
src/utils/: PatchGenerator.cpp  QueryParamsMatch.hpp  TimeUtils.hpp  UrlEncodeDecode.hpp
test/: MyControllerTest.cpp
